--- a/packages/makepkg.conf
+++ b/packages/makepkg.conf
@@ -23,8 +23,8 @@ OPTIONS=(!strip !docs !libtool staticlibs emptydirs zipman purge !upx debug)
 
 INTEGRITY_CHECK=(md5)
 
-DOC_DIRS=({,tools/}{,local/}{,share/}{doc,man,info,locale} {,tools/}{,local/}{,share/},opt/*}/{man,info} {,tools/}{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc} {,tools/}{,local/}lib/locale)
-PURGE_TARGETS=({,tools/}{,local/}share/info/dir .packlist *.pod *.la perllocal.pod *.bs {,tools/}lib/charset.alias)
+DOC_DIRS=({,usr/}{,local/}{,share/}{doc,man,info,locale} {,usr/}{,local/}{,share/},opt/*}/{man,info} {,usr/}{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc} {,usr/}{,local/}lib/locale)
+PURGE_TARGETS=({,usr/}{,local/}share/info/dir .packlist *.pod *.la perllocal.pod *.bs {,usr/}lib/charset.alias)
 
 PKGDEST="@PKGS@"
 SRCDEST="@SOURCES@"
