--- a/packages/libz/PKGBUILD
+++ b/packages/libz/PKGBUILD
@@ -8,6 +8,7 @@ pkgdesc="An ABI-compatible and API-compatible drop-in replacement for zlib"
 arch=('riscv32' 'riscv64')
 url="http://sortix.org/libz/"
 license=('zlib')
+options=('staticlibs')
 source=("https://sortix.org/$pkgname/release/$pkgname-$pkgver.tar.gz")
 md5sums=('aa5b869e8f62fdfe7f5ea3168372edb4')
 
