--- a/stage1/gcc-static/PKGBUILD
+++ b/stage1/gcc-static/PKGBUILD
@@ -1,4 +1,4 @@
-pkgname=host-gcc
+pkgname=host-gcc-static
 pkgver=8.2.0
 gmpver=6.1.2
 mpfrver=4.0.1
@@ -15,6 +15,18 @@ source=("http://ftpmirror.gnu.org/gnu/gcc/gcc-$pkgver/gcc-$pkgver.tar.xz"
 prepare() {
 	cd gcc-$pkgver
 	sed -i 's@\./fixinc\.sh@-c true@' gcc/Makefile.in
+
+	for file in gcc/config/riscv/linux.h; do
+		cp -u $file{,.orig}
+		sed -e 's@/lib\(64\)\?\(32\)\?/ld@/tools&@g' \
+			-e 's@/usr@/tools@g' $file.orig > $file
+		echo '
+	#undef STANDARD_STARTFILE_PREFIX_1
+	#undef STANDARD_STARTFILE_PREFIX_2
+	#define STANDARD_STARTFILE_PREFIX_1 "/tools/lib/"
+	#define STANDARD_STARTFILE_PREFIX_2 ""' >> $file
+		touch $file.orig
+	done
 
 	mv ../gmp-$gmpver gmp
 	mv ../mpfr-$mpfrver mpfr
@@ -33,26 +45,34 @@ build() {
 		--host=$XHOST \
 		--target=$XTARGET $GCCOPTS \
 		--with-sysroot=$ROOTFS \
-		--enable-__cxa_atexit \
-		--enable-checking=release \
+		--with-local-prefix=$ROOTFS/tools \
+		--with-native-system-header-dir=$ROOTFS/tools/include \
+		--with-newlib \
+		--without-headers \
 		--enable-clocale=generic \
-		--enable-languages=c,c++ \
+		--enable-languages=c \
 		--enable-linker-build-id \
-		--enable-shared \
-		--enable-threads=posix \
-		--enable-tls \
+		--disable-decimal-float \
 		--disable-gnu-indirect-function \
+		--disable-libatomic \
+		--disable-libcilkrts \
+		--disable-libgomp \
+		--disable-libitm \
 		--disable-libmpx \
-		--disable-libmudflap \
+		--disable-libquadmath \
 		--disable-libsanitizer \
+		--disable-libssp \
+		--disable-libstdcxx \
+		--disable-libvtv \
 		--disable-multilib \
 		--disable-nls \
-		--disable-symvers
-	make AS_FOR_TARGET="$XTARGET-as" LD_FOR_TARGET="$XTARGET-ld"
+		--disable-shared \
+		--disable-threads
+	make all-gcc all-target-libgcc
 }
 
 package() {
 	cd gcc-$pkgver
 	cd build
-	make -j1 DESTDIR=$pkgdir install
+	make -j1 DESTDIR=$pkgdir install-gcc install-target-libgcc
 }
